Configura executavel e icone do SIGLA